fix profile on mobile

--- a/client/stylus/pages/app.styl
+++ b/client/stylus/pages/app.styl
@@ -10,6 +10,11 @@ body
   display none
 
 .profile
+  @media phone
+    .profile-picture
+      border 3px solid white
+    border-radius 7px
+  z-index 1000
   position absolute
   top 0
   right 0
@@ -58,7 +63,7 @@ body
         position relative
         width 'calc(100% - %s)' % (padWidth * 2)
         .details
-          height 100%;
+          height 100%
           .top-area
             padding 20px
             .title
@@ -69,41 +74,41 @@ body
             .friends-that-like
               @media phone
                 display none
-              width calc(50% - 20px);
+              width calc(50% - 20px)
               float left
               .friend
-                display inline-block;
+                display inline-block
               input, input:active
-                padding 20px;
-                background black;
-                color white;
-                border none;
-                font-size 1.2em;
+                padding 20px
+                background black
+                color white
+                border none
+                font-size 1.2em
               li
-                margin-top 10px;
-                font-size 1.1em;
+                margin-top 10px
+                font-size 1.1em
               li:hover
-                cursor pointer;
+                cursor pointer
             .make-event
               @media phone
                 width 100%
                 padding 0
               width 50%
               padding-left 20px
-              float right;
+              float right
               input, input:active
                 @media phone
                   width 100%
-                padding 20px;
-                background black;
-                color white;
-                border none;
-                font-size 1.2em;
+                padding 20px
+                background black
+                color white
+                border none
+                font-size 1.2em
               button
                 @media phone
                   margin 0
                   width 100%
-                margin-left 10px;
+                margin-left 10px
             .event-link
               opacity 0
         .button-area
@@ -130,17 +135,20 @@ body
             svg
               width 50%
               height 100%
-            // @media phone svg
-            //   width 20px
         .summary
           padding 10px
           color gray
           font-size 20px
+          max-height 300px
+          overflow hidden
+          text-overflow hidden
+          line-height 1.5
+          letter-spacing 1px
         .video
           .title
-            width 100%;
-            display block;
-            text-align center;
+            width 100%
+            display block
+            text-align center
             padding 20px
           .video-player
             width 100%
@@ -160,12 +168,12 @@ body
             display none
 
 .btn-dark
-  background-color gray;
+  background-color gray
   display inline-block
-  padding 20px;
-  font-size 1.2em;
-  color white;
-  font-family BebasNeue;
+  padding 20px
+  font-size 1.2em
+  color white
+  font-family BebasNeue
 
 .btn-dark:hover
-  cursor pointer;
+  cursor pointer
